# conway

./: CMakeLists.txt  README.md
include/conway/: grid.hpp  patterns.hpp  renderer.hpp
src/: grid.cpp  main.cpp  patterns.cpp  renderer.cpp
